--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI=mongodb://127.0.0.1:27017/skinfood-store
+MONGODB_URI=mongodb+srv://Kienminho:Kien10082002@app.9gfhqnj.mongodb.net/skinfood-store
