--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
+    "guid": "^0.0.12",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2"
   }
 }
