add redis store

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,4 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://Kienminho:Kien10082002@app.9gfhqnj.mongodb.net/skinfood-store
+REDIS_URL=redis://redis-10815.c281.us-east-1-2.ec2.cloud.redislabs.com:10815
+REDIS_PASSWORD=nV0uHjJP3BeBu4rmVtY7CCX1FMstrTJt
