--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@tanstack/react-query": "^5.15.5",
     "@tanstack/react-query-devtools": "^5.15.5",
+    "@tinymce/tinymce-react": "^4.3.2",
     "antd": "^5.12.5",
     "axios": "^1.6.2",
     "lucide-react": "^0.300.0",
